--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,4 @@
+source_up
 source "$HOME/.bashrc.d/direnv/docker-machine.sh"
 source "$HOME/.bashrc.d/direnv/nvm.sh"
 source "$HOME/.bashrc.d/direnv/chruby.sh"
