--- a/.envrc.sample
+++ b/.envrc.sample
@@ -8,4 +8,5 @@
 
 source_up
 source "$HOME/.bashrc.d/direnv/docker-machine.sh"
+source "$HOME/.bashrc.d/direnv/chruby.sh"
 source "$HOME/.bashrc.d/direnv/ndenv.sh"
