--- a/.envrc.sample
+++ b/.envrc.sample
@@ -8,4 +8,4 @@
 
 source_up
 source "$HOME/.bashrc.d/direnv/chruby.sh"
-source "$HOME/.bashrc.d/direnv/ndenv.sh"
+source "$HOME/.bashrc.d/direnv/nodenv.sh"
